--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,4 +3,8 @@
     <style name="hintText">
         <item name="android:textSize">15sp</item>
     </style>
+    
+    <style name="menuStyle">
+        <item name="android:textColor">@color/black</item>
+    </style>
 </resources>
