--- a/app/src/main/res/drawable/botton_nav_bar.xml
+++ b/app/src/main/res/drawable/botton_nav_bar.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <shape android:shape="rectangle"  >
-            <solid android:color="#575ccf"></solid>
-            <corners android:radius="20dp" />
+        <shape android:shape="rectangle">
+            <solid android:color="@color/myColor2"></solid>
+            <corners android:radius="80dp"></corners>
         </shape>
     </item>
+
 </selector>
