--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:id="@+id/imageId"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:padding="15dp"
+        android:padding="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHeight_percent="0.5"
         app:layout_constraintTop_toTopOf="parent"
@@ -20,12 +20,28 @@
 
         <ImageView
             android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg"
+
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/background"
-            app:srcCompat="@drawable/sales"
-
-            />
+            android:text="Nature Life"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/imageView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.35000002" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -43,10 +59,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="100dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="8dp"
+
+
             android:layout_marginEnd="100dp"
-
-
             android:width="200dp"
             android:background="@drawable/text_field"
             android:drawableStart="@drawable/customer_icon"
@@ -56,6 +72,8 @@
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             android:textAppearance="@style/hintText"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="parent"
@@ -77,6 +95,8 @@
             android:paddingStart="10dp"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
+            android:textColorHint="@color/black"
+            android:textColor="@color/black"
             android:textAppearance="@style/hintText"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -87,7 +107,7 @@
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_marginTop="20dp"
-            android:width="150dp"
+            android:width="180dp"
             android:height="10dp"
             android:background="@drawable/login_button"
             android:onClick="login"
@@ -106,6 +126,7 @@
             android:layout_marginBottom="10dp"
             android:alpha="0.8"
             android:text="Powered By Xelenic"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
