--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -4,28 +4,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".RegistrationActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/imageId"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:background="@drawable/bg"
         android:padding="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.3"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
 
-        <ImageView
-            android:id="@+id/imageView"
+
+        <TextView
+            android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/background"
-            app:srcCompat="@drawable/sales"
-
-            />
+            android:text="Nature Life"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.22000003" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <EditText
@@ -39,7 +47,7 @@
         android:drawableStart="@drawable/customer_icon"
         android:drawablePadding="10dp"
         android:hint="User Name"
-        android:textAppearance="@style/hintText"
+        style="@style/hintText"
         android:paddingStart="20dp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
@@ -56,7 +64,7 @@
         android:drawableStart="@drawable/email_icon"
         android:drawablePadding="10dp"
         android:hint="Email"
-        android:textAppearance="@style/hintText"
+        style="@style/hintText"
         android:paddingStart="20dp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
@@ -73,7 +81,7 @@
         android:drawableStart="@drawable/phone_icon"
         android:drawablePadding="10dp"
         android:hint="Phone Number"
-        android:textAppearance="@style/hintText"
+        style="@style/hintText"
         android:paddingStart="20dp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
@@ -91,7 +99,7 @@
         android:drawablePadding="10dp"
         android:hint="Password"
         android:inputType="textPassword"
-        android:textAppearance="@style/hintText"
+        style="@style/hintText"
         android:paddingStart="20dp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
@@ -108,7 +116,7 @@
         android:drawableStart="@drawable/password_icon"
         android:drawablePadding="10dp"
         android:hint="Re-Enter Password"
-        android:textAppearance="@style/hintText"
+        style="@style/hintText"
         android:inputType="textPassword"
         android:paddingStart="20dp"
         android:paddingTop="5dp"
