--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,6 +2,9 @@
 <resources>
     <style name="hintText">
         <item name="android:textSize">15sp</item>
+        <item name="android:textColorHint">@color/black</item>
+        <item name="alpha">0.6</item>
+        <item name="android:textColor">@color/black</item>
     </style>
     
     <style name="menuStyle">
