--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.SalesApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.SalesApp" parent="Theme.AppCompat.NoActionBar">
         <!-- Primary brand color. -->
         <item name="android:windowFullscreen">true</item>
         <item name="colorPrimary"> #3498db </item>
